build_full.txt
warning: `C:\Users\nalum\nih-plug-projects\dtcwpt_morph\.cargo\config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking dtcwpt_morph v0.1.0 (C:\Users\nalum\nih-plug-projects\dtcwpt_morph)
error[E0624]: method `add_theme` is private
   --> src\editor.rs:46:12
    |
 46 |         cx.add_theme(r#"
    |            ^^^^^^^^^ private method
    |
   ::: C:\Users\nalum\.cargo\git\checkouts\vizia-e79c6631812e1756\e3fab55\crates\vizia_core\src\context\mod.rs:546:5
    |
546 |     pub(crate) fn add_theme(&mut self, theme: &str) {
    |     ----------------------------------------------- private method defined here

warning: unused variable: `is_pure_h`
   --> src\processor.rs:352:17
    |
352 | ...   let is_pure_h = dest == 3 || (dest > 1 && (dest & (dest + 1)) == 0 && dest.count_ones() == (dest.trailing_ones())); // Pure H path:...
    |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_pure_h`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `node_ids`
   --> src\processor.rs:539:5
    |
539 |     node_ids: &[usize],
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_ids`

For more information about this error, try `rustc --explain E0624`.
warning: `dtcwpt_morph` (lib) generated 2 warnings
error: could not compile `dtcwpt_morph` (lib) due to 1 previous error; 2 warnings emitted
